[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "neutts-air"
version = "0.1.0"
description = "NeuTTS Air: on-device TTS with instant voice cloning"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
  {name = "Neuphonic"}
]
dependencies = [
  "librosa==0.11.0",
  "neucodec>=0.0.4",
  "numpy==2.2.6",
  "phonemizer==3.3.0",
  "soundfile==0.13.1",
  "torch==2.8.0",
  "transformers==4.56.1",
  "resemble-perth==1.0.1"
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.19.2"]
gguf = ["llama-cpp-python>=0.2.90"]

[project.urls]
Homepage = "https://github.com/neuphonic/neutts-air"
Repository = "https://github.com/neuphonic/neutts-air"
